@@ -268,6 +268,7 @@ register_configvar(group,
     domain = "multisite"
     )
 
+
 register_configvar(group,
     "bi_precompile_on_demand",
     Checkbox(title = _("Precompile aggregations on demand"),
@@ -607,6 +608,22 @@ register_configvar(group,
                       "from cache files that have been created during normal operation or have "
                       "been copied here from another monitoring site.")),
     need_restart = True)
+
+register_configvar(group,
+    "restart_locking",
+    DropdownChoice(
+        title = _("Simultanous activation of changes"),
+        help = _("When two users simultanously try to activate the changes then "
+                 "you can decide to abort with an error (default) or have the requests "
+                 "serialized. It is also possible - but not recommended - to turn "
+                 "off locking altogether."),
+        choices = [
+            ('abort', _("Abort with an error")),
+            ('ait' ,  _("Wait until the other has finished") ),
+            (None ,   _("Disable locking") ),
+            ]),
+    need_restart = False
+    )
 
 register_configvar(group,
     "agent_simulator",
