@@ -3,6 +3,7 @@
     * Checks can now omit the typical "OK - " or "WARN -". This text
       will be added automatically if missing.
     * FIX: livecheck: fixed compilation bug
+    * FIX: avoid simultanous activation of changes by means of a lock
     
     Checks & Agents:
     * FIX: jolokia_metrics.mem - now able to handle negative/missing max values
